<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MCC</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">password</string>
    <string name="action_log_in">Log In</string>
    <string name="invalid_password">Invalid password</string>
    <string name="field_required">Field required</string>
    <string name="invalid_username">Invalid username</string>
    <string name="incorrect_password">Incorrect password</string>
    <string name="event_title">Title</string>
    <string name="event_description">Description (optional)</string>
    <string name="label_from">From</string>
    <string name="label_to">To</string>
    <string name="new_event">New event</string>
    <string name="edit_event">Edit event</string>

    <string name="transition_title">transition:TITLE</string>
    <string name="end_date_before">End date should be after start date</string>
    <string name="end_time_before">End time should be after start time</string>
    <string name="sample_time_str">11.11.2015 12:00 - 14:00</string>
</resources>
